k8s/deployments/train-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: train
  namespace: mlflow-stack
spec:
  selector:
    app: train
  ports:
    - port: 7000
      targetPort: 7000
