k8s/deployments/train-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: train-ingress
  namespace: mlflow-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: train.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: train
                port:
                  number: 7000
